--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,5 @@
 [[headers]]
-  for = "Alexandra_Redkova_CV.pdf"
+  for = "/*.pdf"
   [headers.values]
     Content-Type = "application/pdf"
     Content-Disposition = "attachment"
